small text changes

--- a/pages/interface-modules/IB-0210.md
+++ b/pages/interface-modules/IB-0210.md
@@ -9,7 +9,7 @@ has_toc: false
 
 # 4-Channel USB3.0 with 4-DO and 4-DI interface module
 
-An interface module for interfacing up to 4 USB3.0 cameras and with digital I/O for interfacing to PLC-systems.
+An interface module for up to 4 USB3.0 cameras and with digital I/O.
 
 ---
 
@@ -28,9 +28,9 @@ The module has 4 USB3.0 standard-A ports and has an internal USB3.0 hub controll
 
 This allows you to stream up to 4 cameras in high resolution and a high frame rate. All ports are backwards compatible with USB2.0.
 
-The module has also 4 Digital Outputs (DO) and 4 Digital Inputs (DI).
-Both are 24VDC compatible and are optical isolated from the BLOX device.
-Those I/O can used to interface with a remote system such as a PLC system.
+The module has 4 Digital Outputs (DO) and 4 Digital Inputs (DI).
+Both are 24VDC compatible and optical isolated from the BLOX device.
+These I/O can used to interface with a remote system such as a PLCs or other industrial systems.
 
 ## Block diagram
 
