--- a/pages/interface-modules/IB-0200.md
+++ b/pages/interface-modules/IB-0200.md
@@ -7,9 +7,9 @@ has_children: false
 has_toc: false
 ---
 
-# 4-Channel USB3.0 with 4-DO and 4-DI interface module
+# 4-Channel USB3.0
 
-An interface module for interfacing up to 4 USB3.0 cameras and with digital I/O for interfacing to PLC-systems.
+An interface module for up to 4 USB3.0 cameras.
 
 ---
 
