added other png image IB-0100

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -14,7 +14,7 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100@0.25x.png" width="150">
+<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100.png">
 </p>
 
 ## Description
