added img CB-0010

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -14,7 +14,7 @@ has_toc: false
 ---
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CB-0010/CB-0010%20Render.png" width="150">
+<img src="/assets/images/pages/communication-modules/CB-0010/CB-0010.png">
 </p>
 
 ## Description
