--- a/pages/comm-modules/CB-0210.md
+++ b/pages/comm-modules/CB-0210.md
@@ -14,7 +14,7 @@ has_toc: false
 ---
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CB-0210/CB-0210%20Render.png" width="150">
+<img src="/assets/images/pages/communication-modules/CB-0210/CB-0210.png">
 </p>
 
 ## Description
