mew img CB-0200

--- a/pages/comm-modules/CB-0200.md
+++ b/pages/comm-modules/CB-0200.md
@@ -14,7 +14,7 @@ LTE Cat. 4 cellular modem for BLOX platform
 ---
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CB-0200/CB-0200%20Render.png" width="150">
+<img src="/assets/images/pages/communication-modules/CB-0200/CB-0200.png">
 </p>
 
 ## Description
