--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -36,7 +36,7 @@ If you need an other camera, please contact us at [support](mailto:support@ai-bl
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100%20BlockDiagram.svg" width="300">
+<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100-BlockDiagram.png">
 </p>
 
 The above diagram shows the block diagram of the interface module. At the top, we have 3 connectors:
