removed old interface info

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -25,7 +25,7 @@ The maximum number of cameras depends on the Jetson Module:
 * Jetson Nano: up to 3 cameras
 * Jetson TX2 NX and the Jetson Xavier NX: up to 6 cameras
 
-The module has also a USB3.0 port to connect external USB devices like an SSD drive or keyboard/mouse.
+The module also has a USB3.0 port to connect USB devices like an SSD drive or keyboard/mouse.
 
 ## Camera support
 
@@ -39,17 +39,13 @@ If you need an other camera, please contact us at [support](mailto:support@ai-bl
 <img src="/assets/images/pages/interface-blox/IB-0100/IB-0100-BlockDiagram.png">
 </p>
 
-The above diagram shows the block diagram of the interface module. At the top, we have 3 connectors:
-* Power connector for powering the BLOX device
-* Serial connector for connecting the boot terminal 
-* USB connector for flashing the BLOX device
+The above diagram shows the block diagram of the interface module. 
 
-There is an button on the module, which allows you to place the BLOX in recovery mode.
-When the device is in recovery mode, you can flash the Jetson module through the USB.
+There is a USB3.0 port that can be used to connect USB devices like an SSD drive or keyboard/mouse.
 
 There are in total 6 FPC connectors for connecting the cameras. 
-Those connectors are compatible with the Raspberry Pi camera connector. 
-Each camera has it's own 2-lane MIPI channel. 
+Each camera has it's own 2-lane MIPI channel and is compatible with the Raspberry Pi camera 15 pin connector. 
+
 
 
 ## Connections
