minor text change

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -44,7 +44,7 @@ The above diagram shows the block diagram of the interface module.
 There is a USB3.0 port that can be used to connect USB devices like an SSD drive or keyboard/mouse.
 
 There are in total 6 FPC connectors for connecting the cameras. 
-Each camera has it's own 2-lane MIPI channel and is compatible with the Raspberry Pi camera 15 pin connector. 
+Each camera has it's own 2-lane MIPI channel and is compatible with the Raspberry Pi 15 pin camera connector. 
 
 
 
