minor text changes & modified blockdiagram

--- a/pages/comm-modules/CB-0210.md
+++ b/pages/comm-modules/CB-0210.md
@@ -26,7 +26,7 @@ This module needs a SIM card, follow the [how to install the SIM card](/pages/ho
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CB-0210/CB-0210%20Blockdiagram.svg" width="300">
+<img src="/assets/images/pages/communication-modules/CB-0210/CB-0210-BlockDiagram.png">
 </p>
 
 Above is the block diagram of the communication module.
@@ -36,7 +36,7 @@ There are also 2 status LEDs available:
 * Link status - Green LED
 * Activity status - Orange LED
 
-The module has also an internal mPCIe modem which connect to the BLOX. On the field side, there are 3 SMA connectors for the antennas.
+The module has an internal mPCIe modem which connect to the BLOX. On the field side, there are 2 SMA connectors for the antennas.
 
 
 ## Connections
