small text changes

--- a/pages/comm-modules/CB-0200.md
+++ b/pages/comm-modules/CB-0200.md
@@ -26,7 +26,7 @@ This module needs a SIM card, follow the [how to install the SIM card](/pages/ho
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CB-0200/CB-0200%20Blockdiagram.svg" width="300">
+<img src="/assets/images/pages/communication-modules/CB-0200/CB-0200-BlockDiagram.png">
 </p>
 
 Above is the block diagram of the communication module.
