added IB-0310 and fixed IB-0210 img issues

--- a/pages/interface-modules/IB-0310.md
+++ b/pages/interface-modules/IB-0310.md
@@ -1,32 +1,29 @@
 ---
 layout: default
-title: IB-0210 
+title: IB-0310 
 parent: Interface Modules
-nav_order: 3
+nav_order: 5
 has_children: false
 has_toc: false
 ---
 
-# 4-Channel USB3.0 with 4-DO and 4-DI interface module
+# 4-Channel 10/100Mbps PoE Ethernet with 4-DO and 4-DI interface module
 
-An interface module for up to 4 USB3.0 cameras and with digital I/O.
+An interface module for up to 4 PoE IP cameras combined with digital I/O.
 
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0210/IB-0210.png">
+<img src="/assets/images/pages/interface-blox/IB-0310/IB-0310.png">
 </p>
 
 ## Description
 
-This module can be used in applications where USB3.0 is required and some input/output interfacing is necessary.
-The module has 4 USB3.0 standard-A ports and has an internal USB3.0 hub controller on the module which support following speed modes:
-* Super Speed (SS) - 5 Gbps
-* High Speed (HS) - 480 Mbps
-* Full Speed (FS) - 12 Mbps
-* Low Speed (LS) - 1.5 Mbps
+The IB-0310 is ideal for camera vision applications that require high throughput and Power-over-Ethernet (PoE). Additionally there are 4 digital outputs (DO) and 4 digital inputs (DI) that can be used to interface with other systems for application control. 
 
-This allows you to stream up to 4 cameras in high resolution and a high frame rate. All ports are backwards compatible with USB2.0.
+The module has an integrated PoE PSE Type 2 supply, which provides 30W at each connector. This eliminates the need for an external PoE injector or PoE switch.
+
+Each Ethernet port is separated with its own MAC address, to ensure each camera to stream at maximum throughput of 100Mbps.
 
 The module has 4 Digital Outputs (DO) and 4 Digital Inputs (DI).
 Both are 24VDC compatible and optical isolated from the BLOX device.
@@ -35,43 +32,54 @@ These I/O can used to interface with a remote system such as a PLCs or other ind
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0210/IB-0210-Blockdiagram.svg" width="300">
+<img src="/assets/images/pages/interface-blox/IB-0310/IB-0310-BlockDiagram.png" width="300">
 </p>
 
-The above diagram shows the block diagram of the interface module. There are 3 main parts:
-* USB3.0 Hub 
+The block diagram above shows the 5 main parts:
+* USB2.0 Hubs
+* 4 MAC & PHY 
+* PoE PSE
 * Digital Output circuits
 * Digital Input circuits
 
-The USB3.0 Hub is connected to the BLOX USB3.0 port. 
-This way, the BLOX USB3.0 port is extended with 4 USB3.0 ports P1...P4.
+The 4 100Mbps Ethernet connections are spread over 2 USB2.0 Hubs. These hubs are connected to the USB3.0 interfaces of the BLOX. Each Ethernet connection has its own MAC or Media Access Controller. This results in 4 hardware separated connections for maximum throughput of 100Mbps. 
+
+A PoE PSE or Power-over-Ethernet Power Sourcing Equipment Type 2 provides 30W at each connector. 
 
 The digital outputs and inputs are galvanic isolated from the BLOX. 
 This allows you to use 2 different power supplies: one for the BLOX (24VDC) and the other for the I/O (24VDC I/O).
 
 ## Connections
 
+<!--
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0210/IB-0210-Connections.svg" width="200">
+<img src="/assets/images/pages/interface-blox/IB-0200/IB-0200%20Connections.svg" width="200">
 </p>
+-->
 
 ### P1 to P4 port
 
-The Px are the USB3.0 ports and compatible with the USB3.0 standard-A.
+The P1..P4 are RJ45 connectors of the 10/100Mbits Ethernet ports. 
+
+Each connector hast 2 status LEDs available:
+
+* Link status - Green LED
+* Activity status - Orange LED
 
 
-| Pin#  | Pin Name   | Description                                                |
-|:-----:|:----------:|:-----------------------------------------------------------|
-| Shell | Shield     | Metal housing                                              |
-| 1     | VBUS       | Power                                                      |
-| 2     | D-         | USB 2.0 differential pair - negative signal                |
-| 3     | D+         | USB 2.0 differential pair - positive signal                |
-| 4     | GND        | Ground for power return                                    |
-| 5     | StdA_SSRX- | SuperSpeed receiver differential pair - negative signal    |
-| 6     | StdA_SSRX+ | SuperSpeed receiver differential pair - positive signal    |
-| 7     | GND_DRAIN  | Ground for signal return                                   |
-| 8     | StdA_SSTX- | SuperSpeed transmitter differential pair - negative signal |
-| 9     | StdA_SSTX+ | SuperSpeed transmitter differential pair - positive signal |
+The P1..P4 ports RJ45 connector with standard pin out:  
+
+| Pin# | Pin Name  | Description               |
+|:-----|:----------|:--------------------------|
+| 1    | TxRx A +  | Bi-directional pair A +   |
+| 2    | TxRx A -  | Bi-directional pair A -   |
+| 3    | TxRx B +  | Bi-directional pair B +   |
+| 4    | TxRx C +  | Bi-directional pair C +   |
+| 5    | TxRx C -  | Bi-directional pair C -   |
+| 6    | TxRx B -  | Bi-directional pair B -   |
+| 7    | TxRx D +  | Bi-directional pair D +   |
+| 8    | TxRx D -  | Bi-directional pair D -   |
+
 
 ### I/O Port
 
