added CB-0100 & CB-0110

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -2,8 +2,8 @@
 layout: default
 title: CB-0010
 parent: Comm Modules
-nav_order: 2
-has_children: true
+nav_order: 1
+has_children: false
 has_toc: false
 ---
 
