changed power specs for DIO IB-0310

--- a/pages/interface-modules/IB-0310.md
+++ b/pages/interface-modules/IB-0310.md
@@ -21,12 +21,12 @@ An interface module for up to 4 PoE IP cameras combined with digital I/O.
 
 The IB-0310 is ideal for camera vision applications that require high throughput and Power-over-Ethernet (PoE). Additionally there are 4 digital outputs (DO) and 4 digital inputs (DI) that can be used to interface with other systems for application control. 
 
-The module has an integrated PoE PSE Type 2 supply, which provides 30W at each connector. This eliminates the need for an external PoE injector or PoE switch.
+The module has an integrated PoE PSE Type 2 supply, which provides 30W at each connector. This eliminates the need for an external PoE injector or PoE switch. To be able to use the PoE, the Blox platform need to be powered with 48V. 
 
 Each Ethernet port is separated with its own MAC address, to ensure each camera to stream at maximum throughput of 100Mbps.
 
 The module has 4 Digital Outputs (DO) and 4 Digital Inputs (DI).
-Both are 24VDC compatible and optical isolated from the BLOX device.
+They are galvanically isolated and require an external power supply with a range from 12V to 40V. The inputs and outputs will be
 These I/O can used to interface with a remote system such as a PLCs or other industrial systems.
 
 ## Block diagram
